// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`YooSlimScrollComponent Rendering Should render with a basic structure 1`] = `
<yoo-slim-scroll
  class="hydrated"
  data-yoo-slim-scroll-host=""
>
  
  <div
    class="scroll-slot-container"
    data-yoo-slim-scroll=""
    style="height: 100%; width: 100%; max-height: 768px;"
  >
    <div
      class="scroll-slot-content"
      data-yoo-slim-scroll=""
      data-yoo-slim-scroll-slot=""
    >
      
    </div>
  </div>
</yoo-slim-scroll>
`;

exports[`YooSlimScrollComponent Rendering Should render with a slot 1`] = `
<yoo-slim-scroll
  class="hydrated"
  data-yoo-slim-scroll-host=""
>
  
  
  
  
  <div
    class="scroll-slot-container"
    data-yoo-slim-scroll=""
    style="height: 100%; width: 100%; max-height: 768px;"
  >
    <div
      class="scroll-slot-content"
      data-yoo-slim-scroll=""
      data-yoo-slim-scroll-slot=""
    >
      
      
                          
      <div>
        
                              
        <p>
          Hola this is a scrollable content in a Slim Scroll
        </p>
        
                              
        <yoo-badge
          class="danger"
          text="SLIM"
        />
        
                          
      </div>
      
                      
    </div>
  </div>
</yoo-slim-scroll>
`;
